# rust_5ex

./: LICENSE  README.md
mcp_29/: Cargo.toml  README.md
mcp_29/src/: main.rs  mod_search.rs
qwen35_1/: Cargo.toml  README.md
qwen35_1/src/: main.rs
rag_3sql/: Cargo.toml  README.md  package.json  tsconfig.json
rag_3sql/public/: test.js
rag_3sql/src/: main.rs  mod_search.rs
rag_3sql/src-ts/: App.tsx  client.tsx
rag_3sql/src-ts/client/: home.tsx
rag_3sql/src-ts/components/: Head.tsx
sqlite-vec-1/: Cargo.toml  README.md
sqlite-vec-1/src/: main.rs
sqlite-vec-2/: Cargo.toml  README.md
sqlite-vec-2/src/: main.rs
sqlite-vec-3/: Cargo.toml  README.md
sqlite-vec-3/src/: main.rs
todo_1/: Cargo.toml  README.md  table.sql
todo_1/src/: main.rs
