[package]
name = "mcp_29"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
dotenvy = "0.15"
qdrant-client = "1.16.0"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
tonic = "0.14.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-segmentation = "1.10"
uuid = { version = "1", features = ["v4"] }


