[package]
name = "rag_server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = "0.7.5"
reqwest = { version = "0.12", features = ["json"] }
rusqlite = {version="0.31.0", features=["bundled"]}
sqlite-vec={version="0.0.1-alpha.7"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1", features = ["v4"] }
zerocopy = "0.7.33"
